# stellar

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
stellar/: hello.py
stellar/stellar/: settings.py  urls.py
