[tool.poetry]
name = "docker-athens-stellar"
version = "0.1.0"
description = ""
authors = ["Paris Kasidiaris <paris@withlogic.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
psycopg2-binary = "^2.9.3"
redis = "^4.2.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
mypy = "^0.942"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
